# fastapi-game-api-experiment

./: .dockerignore  .env.db  .env.example  .envrc  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  Makefile  README.md  alembic.ini  bors.toml  docker-compose.yml  pyproject.toml  requirements.dev.txt  setup.cfg  tox.ini
.github/: renovate.json
.github/workflows/: check-sphinx-docs.yml  codeql.yml  coverage.yml  pypi.yml
carnage/: __main__.py  application.py  constants.py  logger.py
carnage/api/auth/: authentication.py
carnage/api/routes/: account.py  aligment.py  authentication.py  base.py  condition.py  debug.py  difficulty.py  game_mode.py  health_check.py  player.py  race.py  size.py
carnage/api/routes/authentication/: __init__.py  base.py  github.py  gitlab.py  google.py
carnage/api/routes/chat/: __init__.py  channel_chat.py  global_chat.py
carnage/api/routes/dungeon/: __init__.py  dungeon.py  dungeon_difficulty.py  dungeon_schema.py
carnage/api/routes/item/: __init__.py  item.py  item_base_type.py  item_magical_type.py  item_rarity.py
carnage/api/routes/monster/: __init__.py  monster.py  monster_type.py
carnage/api/routes/spell/: __init__.py  spell.py  spell_duration_type.py  spell_range_type.py  spell_school.py
carnage/api/routes/vocation/: __init__.py  vocation.py  vocation_spell.py
carnage/api/schemas/: account.py  aligment.py  condition.py  difficulty.py  game_mode.py  player.py  race.py  size.py
carnage/api/schemas/chat/: __init__.py  channel_chat.py
carnage/api/schemas/dungeon/: __init__.py  dungeon.py  dungeon_difficulty.py  dungeon_schema.py
carnage/api/schemas/item/: __init__.py  item.py  item_base_type.py  item_magical_type.py  item_rarity.py
carnage/api/schemas/spell/: spell.py  (+4 more)
carnage/cli/: __init__.py  migration.py  seed.py  serve.py
carnage/database/: session.py
carnage/database/_migrations/: env.py  script.py.mako
carnage/database/models/: account.py  aligment.py  base.py  condition.py  difficulty.py  game_mode.py  item_magical_type.py  map_schema.py  player.py  race.py  setting.py  size.py  spell_range_type.py
carnage/database/repository/: account.py  aligment.py  base.py  condition.py  difficulty.py  game_mode.py  item.py  item_base_type.py  item_magical_type.py  item_rarity.py  map.py  map_difficulty.py  map_schema.py  monster.py  monster_type.py  player.py  race.py  setting.py  size.py  spell_duration_type.py  spell_range_type.py  spell_school.py  vocation_spell.py
carnage/database/seeds/: account.py  aligment.py  base.py  condition.py  difficulty.py  game_mode.py  item.py  item_base_type.py  item_magical_type.py  item_rarity.py  manager.py  map.py  map_difficulty.py  map_schema.py  monster.py  monster_type.py  player.py  race.py  setting.py  size.py  spell.py  spell_duration_type.py  spell_range_type.py  spell_school.py  vocation_spell.py
carnage/monsters/: base.py  dragon.py  manager.py
carnage/players/: player.py
carnage/players/vocations/: base.py  knight.py  manager.py
carnage/routes/: account.py  aligment.py  authentication.py  base.py  item.py  item_base_type.py  item_magical_type.py  item_rarity.py  map.py  map_difficulty.py  map_schema.py  monster.py  monster_type.py  player.py  race.py  size.py  spell.py  spell_duration_type.py  spell_range_type.py  spell_school.py  vocation.py  vocation_spell.py
carnage/routes/dungeon/: __init__.py  dungeon.py  dungeon_difficulty.py  dungeon_schema.py
carnage/routes/item/: __init__.py  item.py  item_base_type.py  item_magical_type.py  item_rarity.py
carnage/routes/map/: __init__.py  map.py  map_difficulty.py  map_schema.py
carnage/routes/monster/: __init__.py  monster.py  monster_type.py
carnage/routes/schemas/: account.py  aligment.py  base.py  item.py  item_base_type.py  item_magical_type.py  item_rarity.py  map.py  map_difficulty.py  map_schema.py  monster.py  monster_type.py  player.py  race.py  size.py  spell.py  spell_duration_type.py  spell_range_type.py  spell_school.py  vocation.py  vocation_spell.py
carnage/routes/spell/: __init__.py  spell.py  spell_duration_type.py  spell_range_type.py  spell_school.py
carnage/routes/vocation/: __init__.py  vocation.py  vocation_spell.py
carnage/spells/: base.py  fireball.py  manager.py
carnage/systems/: dungeon_generation.py
carnage/vocations/: knight.py  manager.py
dockerfiles/: Dockerfile
docs/source/: application.rst  conf.py  constants.rst  index.rst  logger.rst
docs/source/api/: index.rst
docs/source/cli/: index.rst  migration.rst  seed.rst  serve.rst
docs/source/database/: index.rst  session.rst
docs/source/monsters/: base.rst  dragon.rst  index.rst  manager.rst
docs/source/players/: index.rst  player.rst
docs/source/spells/: base.rst  fireball.rst  index.rst  manager.rst
docs/source/systems/: dungeon_generation.rst  index.rst
docs/source/vocations/: base.rst  index.rst  knight.rst  manager.rst
examples/: dungeon_schema_jinja.py  simulacrum.py
requirements/: requirements.dev.txt  requirements.docs.txt
scripts/: check_sphinx_docs.py  generate_secrets.py
tests/: main_test.py
tests/unit_tests/: application_test.py  conftest.py  logger_test.py
tests/unit_tests/cli/: migration_test.py  seed_test.py  serve_test.py
tests/unit_tests/database/: session_test.py  test_session.py
tests/unit_tests/monsters/: dragon_test.py  manager_test.py
tests/unit_tests/players/: player_test.py
tests/unit_tests/routes/: account_test.py  aligment_test.py  authentication_test.py  dungeon_difficulty_test.py  dungeon_schema_test.py  dungeon_test.py  item_base_type_test.py  item_magical_type_test.py  item_rarity_test.py  item_test.py  map_difficulty_test.py  map_schema_test.py  map_test.py  monster_test.py  monster_type_test.py  player_test.py  race_test.py  size_test.py  spell_duration_type_test.py  spell_range_type_test.py  spell_school_test.py  spell_test.py  vocation_spell_test.py  vocation_test.py
tests/unit_tests/spells/: fireball_test.py  manager_test.py
tests/unit_tests/systems/: dungeon_generation_test.py
tests/unit_tests/vocations/: knight_test.py  manager_test.py
(+412 files in other folders)
