[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "carnage"
description = "API for Carnage."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["carnage", "game", "hardcore", "api"]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "alembic==1.9.1",
    "authlib==1.2.0",
    "cryptography==39.0.0",
    "fastapi==0.88.0",
    "itsdangerous==2.1.2",
    "psycopg2-binary==2.9.5",
    "pydantic[email]==1.10.4",
    "sqlalchemy==1.4.46",
    "uvicorn[standard]==0.20.0",
    "pydantic-sqlalchemy==0.0.9",
    "rich==13.0.1",
    "jinja2==3.1.2",
    "httpx==0.23.3",
    "python-jose[cryptography]==3.3.0",
]
dynamic = ["version"]

[project.scripts]
carnage = "carnage.__main__:main"

# Tool
[tool.setuptools.packages]
find = { exclude = ["tests*"] }

[tool.ruff]
line-length = 79

select = ["F", "E", "W", "I", "D", "PLC", "PLE", "PLR", "PLW"]
ignore = ["D203", "D213", "D100", "D101"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
    "venv3",
]
# Assume Python 3.11.
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["D"]
"tests/*" = ["D"]
"carnage/database/_migrations/*" = ["D"]
"carnage/database/seeds/dungeon/dungeon_schema.py" = ["E501"]


[tool.coverage.run]
plugins = ["covdefaults"]
source = ["carnage"]
omit = ["carnage/api/routes/debug.py"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[tool.black]
target-version = ["py311"]
exclude = "((.eggs | .git | .pytest_cache | build | dist))"
