[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "carnage"
description = "API for Carnage."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["carnage", "game", "hardcore", "api"]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "alembic==1.13.0",
    "authlib==1.2.1",
    "cryptography==41.0.7",
    "fastapi==0.109.0",
    "itsdangerous==2.1.2",
    "psycopg2-binary==2.9.9",
    "pydantic[email]==2.5.3",
    "sqlalchemy==2.0.25",
    "uvicorn[standard]==0.25.0",
    "pydantic-sqlalchemy==0.0.9",
    "rich==13.7.0",
    "jinja2==3.1.3",
    "httpx==0.26.0",
    "python-jose[cryptography]==3.3.0",
]
dynamic = ["version"]

[project.scripts]
carnage = "carnage.__main__:main"

# Tool
[tool.setuptools.packages]
find = { exclude = ["tests*"] }

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["carnage"]
omit = ["carnage/api/routes/debug.py"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[tool.black]
line-length = 79
target-version = ["py311"]
exclude = "((.eggs | .git | .pytest_cache | build | dist))"

[tool.isort]
profile = "black"
line_length = 79

[tool.interrogate]
ignore-init-method = false
ignore-init-module = true
fail-under = 100
exclude = ["carnage/database/_migrations"]
quiet = false
color = true
omit-covered-files = true
