[metadata]
name = carnage
version = 0.0.0
description = A hardcode game
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/r0x0d/carnage
author = Rodolfo Olivieri
author_email = rodolfo.olivieri3@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    alembic==1.8.1
    fastapi==0.85.1
    psycopg2-binary==2.9.4
    pydantic==1.10.2
    sqlalchemy==1.4.42
    uvicorn[standard]==0.18.3
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    carnage = carnage.__main__:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
source = carnage

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
ignore_errors = true
