[metadata]
name = carnage-api
version = 0.0.0
description = API for Carnage.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/carnage-world/api
author = Rodolfo Olivieri
author_email = rodolfo.olivieri3@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords =
    carnage
    game
    hardcore
    api

[options]
packages = find:
python_requires = >=3.11
install_requires =
    alembic==1.9.0
    authlib==1.2.0
    cryptography==39.0.0
    fastapi==0.88.0
    itsdangerous==2.1.2
    psycopg2-binary==2.9.5
    pydantic[email]==1.10.2
    sqlalchemy==1.4.45
    uvicorn[standard]==0.20.0
    httpx==0.23.1
    pydantic-sqlalchemy==0.0.9
    rich==12.6.0
    jinja2==3.1.2
    python-jose[cryptography]==3.3.0

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
source = carnage
omit =
    carnage/api/routes/debug.py

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
ignore_errors = true

[black]
target-version =
    "py311"
exclude = "((.eggs | .git | .pytest_cache | build | dist))"
